--- a/modules/liferay-sample-module/liferay-sample-module-js-web/src/app/sample/components/sample-list/sample-list.component.html
+++ b/modules/liferay-sample-module/liferay-sample-module-js-web/src/app/sample/components/sample-list/sample-list.component.html
@@ -1,16 +1,18 @@
 <ng-container *ngIf="samples">
   <ul class="list-unstyled">
     <li *ngFor="let sample of samples | async">
-    <a routerLink="/details/{{sample.id}}" [skipLocationChange]="true">
+    <p>
         <p>
           <strong>Id: </strong>{{sample.id}}
         </p>
         <p>
           <strong>Name: </strong>{{sample.name}}
         </p>
-      </a>
-      <button (click)="delete(sample.id)">Delete</button>
+      </p>
+      <button *ngIf="isUserSignedIn" (click)="edit(sample.id)">Edit</button>
+      <button *ngIf="isUserSignedIn" (click)="delete(sample.id)">Delete</button>
     </li>
   </ul>
 </ng-container>
-<button (click)="create()">Add</button>
+
+<button *ngIf="isUserSignedIn" (click)="create()">Add</button>
